# xsd-parser-rs

xsd-parser-cli/src/: main.rs
xsd-parser/src/generator/: builder.rs  default.rs  enum.rs  enum_case.rs  mod.rs  struct.rs
xsd-parser/tests/enumeration/: expected.rs
xsd-types/: Cargo.toml
xsd-types/src/types/: datetime.rs  decimal.rs
